# tg-translator

./: .gitignore  .rules  Makefile  README.md  config_example.txt  pyproject.toml
deploy/: inventory  playbook.yml
docs/api/: ROY_INTEGRATION.md
docs/process/: session_summary.md  session_summary_2026-02-04.md
docs/tasks/backlog/: task-004-refactor-handlers.md  task-005-whisper-integration.md  task-006-dockerization.md  task-007-llm-translation.md
docs/tasks/current/: task-001-custom-dictionary.md
docs/tasks/done/: bug-001-group-commands.md  fix-002-tests.md  task-001-custom-dictionary.md  task-002-multilanguage.md  task-003-tts.md  task-005-whisper-integration.md  task-007-llm-translation.md  task-008-stop-mode.md  task-009-interactive-mute.md  task-010-hide-transcription.md  task-011-bot-menu-scope-issue.md  task-011-ui-polish.md  task-012-split-buttons.md  task-013-mobile-buttons.md  task-014-dynamic-buttons.md  task-015-dict-fix.md  task-016-whisper-upgrade.md  task-017-silero-tts.md  task-018-smart-clean.md  task-019-voice-gender.md  task-021-tts-fix.md  task-022-voice-presets.md  task-023-help-refresh.md  task-024-auto-test-phrase.md  task-025-groq-stt.md
scripts/: verify_translation.py
src/tg_translator/: __init__.py  api.py  commands.py  db.py  inflector.py  main.py  translator_service.py
src/tg_translator/handlers/: admin.py  (+5 more)
tests/: test_admin_handlers.py  test_api.py  test_clean_command.py  test_db_mode.py  test_groq_stt.py  test_groq_translation.py  test_interactive_text.py  test_main_commands.py  test_stop_logic.py  test_translator.py
